base/src/test/resources/failure/implicit/implicit2.aya.txt
In file $FILE:4:33 ->

  2 | 
  3 | def y : Pi {a : Unit} -> Unit => \{a} => a
  4 | def x : Pi {a : Unit} -> Unit => y
                                       ^^

Error: Unsolved meta

1 error(s), 0 warning(s).
What are you doing?
